# mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.experiments  Makefile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  setup_experiments.sh
mlops/: __init__.py  main.py
mlops/data/: process.py  s3_manager.py
mlops/models/titanic_classifier/: config.yaml  train.py
scripts/: run_experiments.py  seed_s3.py
