[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "m.somov" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mlops"]
force_sort_within_sections = true

[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "mlops project"
authors = ["m.somov"]

[tool.poetry.dependencies]
python = ">=3.9"
mypy = "^1.13.0"
isort = "^5.13.2"
pip = "^24.3.1"
python-dotenv = "^1.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
boto3 = "^1.35.54"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
mlflow = "^2.18.0"
types-pyyaml = "^6.0.12.20240917"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "2.0.2.230605"
boto3-stubs = "^1.35.54"

